--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -7,7 +7,7 @@ author_profile: true
 
 {% include base_path %}
 
-
+<embed src="/files/WatermarkStatistics.pdf" width="500" height="375" type="application/pdf">
 {% for post in site.portfolio %}
   {% include archive-single.html %}
 {% endfor %}
